# PersonalTeacherAssistant

./: .gitignore  README.md  Smallfunctions.py  display.py  entry.py  hayato_test.py  logs.csv  pyproject.toml  test.py  utils.py
contextfiles/: CFadmin2.txt  CFriku.txt
img/: ArchitectureFinal.drawio - draw.io.html
img/ArchitectureFinal.drawio - draw.io_files/: a.html  api.js
project/: logs.csv
project/accounts/: urls.py  views.py
project/accounts/templates/: index.html  login.html  logout.html  signup.html
project/app/: forms.py  urls.py  views.py
project/app/templates/: index.html
project/contexts/: riku.pickle
project/project/: settings.py  urls.py
src/personalteacherassistant/: app.py  auth.py  cost.py  model.py
